adding, modifying and removing todos features added

--- a/src/components/todos.css
+++ b/src/components/todos.css
@@ -320,6 +320,7 @@ body {
 .clear-completed,
 html .clear-completed:active {
     float: right;
+    margin-right: -12px;
     position: relative;
     line-height: 20px;
     text-decoration: none;
